--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,7 @@ middle_name: R.
 last_name: Wozniak
 email: maciejw@kth.se
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Robot perception fails and it is our task to develop the tools that account for that!
-I am working on developing deep learning models and AR/VR applications for robotics, that account for real-world imperfections, such as missing data, sensor failure, novel
-domains, and challenging environments.
+  Robot perception fails and it is our task to develop the tools that account for that! I am working on developing deep learning models and AR/VR applications for robotics, that account for real-world imperfections, such as missing data, sensor failure, novel domains, and challenging environments.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
